# finpal

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  dev.env  main.py  pyproject.toml
alembic/: env.py
data/: definitions.udsl
data/dbml/: referencial.dbml
finally/api/: main.py
finally/web/: app.py
finpal/: config.py
finpal/cli/: main.py
scripts/: init_db.py  load_ref_data.py  setup_db.py
