[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finpal"
version = "0.1.0"
description = "Sistema de Gestão Financeira"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Seu Nome", email = "seu.email@example.com"},
]
dependencies = [
    "fastapi>=0.115",
    "sqlalchemy>=2",
    "alembic>=1.12.0",
    "pydantic>=2",
    "typer>=0.9.0",
    "rich>=13.6.0",
    "textual>=0.38.1",
    "streamlit>=1.27.2",
    "plotly>=5.17.0",
    "pandas>=2.1.1",
    "uvicorn>=0.23.2",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "black>=23.9.1",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]



[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.hatch.envs.default]
dependencies = []
dev-dependencies = [
    "pytest>=7.4.2",
    "black>=23.9.1",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]

[project.scripts]
finpal = "finpal.cli.main:app"
api = "finpal.api.main:main"
web = "finpal.web.app:main"
tui = "finpal.cli.tui.app:main"
cli = "finpal.cli.main:main"
devenv = "scripts.devenv:main"
setup-db = "scripts.setup_db:setup_database"
import-data = "scripts.import_data:main"
test = "pytest:main"
lint = "flake8.main.cli:main"
format = "scripts.format_code:main"
migrate = "alembic.config:main"
backup = "scripts.backup:main"
